--- a/src/compoents/album/AlbumComponent.css
+++ b/src/compoents/album/AlbumComponent.css
@@ -1,90 +1,26 @@
-body{
-    margin: 0 auto;
-  }
-  
-.card {
-    width: 800px ;
-    padding: 1px;
-    height: 350px;
-    background: white;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-top: -300px;
-    margin-left: -200px;
+.box {
+    display:flex;
+    padding: 2rem;
+}
+
+.h2__mode{
+    color: white;
+    text-align: center;
+}
+.box-container{
     display: flex;
-    flex-direction: column;
-    border-radius: 15px 15px 15px 15px;
+    flex-wrap: wrap;
     flex-grow: 1;
-    display: grid;
-    grid-template-columns: 
-    repeat(
-        auto-fit,
-        minmax(345px,1.5fr)
-    );
-    gap: 30px;
-    box-shadow:
-        inset 0 0  0 2px rgb(255,255,255),
-          0.3em 0.3em 1em rgba(0,0,0,0.3);
-    transition: 0.3s;
+    flex-direction: row;
+    justify-content: space-between;
+    grid-template-columns: repeat(auto-fit, minmax(345px, 1fr)); /* Define las columnas y su tamaño mínimo */
+    gap: 30px; /* Espacio entre las tarjetas */
+}
+li {
+    list-style:none
 }
 
-
-
-img {
-    width: 91%;
-    border-radius: 10px 0px 0px 10px;
+.item {
+    margin-left: 300px;
 }
-
-.name {
-    margin-top: 10%;
-}
-
-.artista {
-    margin-top: -10%;
-    margin-left: 4px;
-}
-
-.album {
-    color: rgb(131, 125, 125);
-    margin-top: 30px;
-}
-
-.year {
-    color: rgb(171, 165, 165);
-    margin-top: -22px;
-}
-.card__info {
-    flex-direction: column;
-    margin: 2px;
-    margin-left: -10px;
-}
-
-.genre{
-    background: #f8c0c5;
-    justify-content: start;
-    margin-top: 30px;
-    border-radius: 200px;
-    color: black;
-}
-button {
-    padding: 0.6em 1.2em;
-}
-
-.like-button {
-    background-color: transparent;
-    border: none;
-    outline: none;
-    font-size: 24px;
-    cursor: pointer;
-    transition: color 0.3s;
-    font-size: 40px;
-    justify-content: flex-end;
-    display: flex;
-    margin: -2.4rem;
-    padding-right: 3.5rem;
-  }
-  .like-button.liked {
-    color:red
-  }
   
