--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,9 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: white;
-  background-color: white;
+  color-scheme: light dark;
+  color: rgba(15, 15, 15, 0.87);
+  background-color: #242424;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -31,29 +32,6 @@ body {
 }
 
 h1 {
-  font-size: 3.2em;
   line-height: 1.1;
 }
 
-button {
-  border-radius: 8px;
-  background: white;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  cursor: pointer;
-}
-
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: white;
-  }
-  a:hover {
-    color: #747bff;
-  }
- 
-}
